force-app/main/default/objects/cadmus_core__Actionable__c/fields/Get_Thumbnail_Pictures_DataSource__c.field-meta.xml
<CustomField>
    <fullName>Get_Thumbnail_Pictures_DataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Get Thumbnail Pictures DataSource</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Get Thumbnail Pictures DataSource Guid)</relationshipLabel>
    <relationshipName>ActionableDataSourceThumbnailPictures</relationshipName>
    <type>Lookup</type>
</CustomField>