force-app/main/default/objects/cadmus_core__Actionable__c/fields/Get_Thumbnail_Size__c.field-meta.xml
<CustomField>
    <fullName>Get_Thumbnail_Size__c</fullName>
    <label>Get Thumbnail Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THUMB120BY90</fullName>
                <default>true</default>
                <label>THUMB120BY90</label>
            </value>
            <value>
                <fullName>THUMB240BY180</fullName>
            </value>
            <value>
                <fullName>THUMB720BY480</fullName>
            </value>
            <value>
                <fullName>FULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>