force-app/main/default/objects/cadmus_core__Actionable__c/fields/Get_Url_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Get_Url_Field_API_Name__c</fullName>
    <label>Get Url Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>