force-app/main/default/objects/cadmus_core__Actionable__c/fields/Get_Url_Master_DataSource_Guid__c.field-meta.xml
<CustomField>
    <fullName>Get_Url_Master_DataSource_Guid__c</fullName>
    <formula>Get_Url_Master_DataSource__r.cadmus_core__CustomerDataSourceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Url Master DataSource Guid</label>
    <type>Text</type>
</CustomField>