force-app/main/default/objects/cadmus_core__Actionable__c/fields/Rich_Text_Pic_height__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Pic_height__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>All pictures in the rich text field will be set to this height. The width will be in ratio with the height. 0 and lower will be ignored. So, set to 0 to have no height set and use the default height or do no scaling</inlineHelpText>
    <label>Rich Text Pic height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>