force-app/main/default/objects/cadmus_core__Actionable__c/fields/Rich_Text_Record_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Record_Field_Name__c</fullName>
    <label>Rich Text Record Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>