force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/Get_Thumbnails_Url.recordType-meta.xml
<RecordType>
    <fullName>Get_Thumbnails_Url</fullName>
    <active>true</active>
    <description>Move your FILES into URLS</description>
    <label>Get Thumbnails Url</label>
</RecordType>